--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="img-vrap">
-        <a href="https://www.facebook.com/yuliabolhak?ref=bookmarks" target="_blank"><img src="https://i.ibb.co/Gt5Pbf0/romankostiuk.jpg" alt="Roman Kostiuk"></a>
+        <a [href]=facebook target="_blank"><img [src]=image alt="Roman Kostiuk"></a>
     </div>
     <div class="about-info">
         <h3>Some information aboute me</h3>
@@ -11,6 +11,6 @@
             <li>Married. The daughter is 5 years old</li>
             <li>I change my specialty. In process...</li>
         </ul>
-
     </div>
+    <p>{{title}}</p>
 </section>
