--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="img-vrap">
-    <a href="https://www.facebook.com/yuliabolhak?ref=bookmarks" target="_blank"><img src="https://i.ibb.co/Gt5Pbf0/romankostiuk.jpg" alt="Roman Kostiuk"></a>
+    <a [href]=facebook target="_blank"><img [src]=image  alt="Roman Kostiuk"></a>
 </div>
