before http client

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,8 +9,7 @@
             <li>Graduated from the comprehensive school and the National Technical University of Oil and Gas</li>
             <li>By education - an automation engineer with eight years of experience</li>
             <li>Married. The daughter is 5 years old</li>
-            <li>I change my specialty. In process...</li>
+            <li>I change my specialty - in process...</li>
         </ul>
     </div>
-    <p>{{title}}</p>
 </section>
