before picture service

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="img-vrap">
-        <a [href]=facebook target="_blank"><img [src]=image alt="Roman Kostiuk"></a>
+        <a [href]="facebook" target="_blank"><img [src]="image" alt="Roman Kostiuk"></a>
     </div>
     <div class="about-info">
         <h3>Some information aboute me</h3>
