--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <nav>
         <a routerLink="">Home </a>
         <a routerLink="/about">About </a>
-        <a routerLink="/carrency">Carrency rate </a>
+        <a routerLink="/currency">Carrency rate </a>
     </nav>
     <router-outlet></router-outlet>
 </div>
