--- a/src/app/currency/currency.component.html
+++ b/src/app/currency/currency.component.html
@@ -1,1 +1,12 @@
-<p>currency works!</p>
+<section>
+    <div>
+        <h1>Currency rate NBU for today</h1>
+    </div>
+
+
+    <div>
+        <table>
+
+        </table>
+    </div>
+</section>
