it's alive alive!!!!!!

--- a/src/app/currency/currency.component.css
+++ b/src/app/currency/currency.component.css
@@ -1,3 +1,12 @@
-section {
+h2 {
     text-align: center;
+}
+
+.wrapper {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.mat-elevation-z8 {
+    width: 100%;
 }
