--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
     <h1>Roman Kostiuk</h1>
     <nav>
-        <a routerLink="">Home </a>
+        <a routerLink="/home">Home </a>
         <a routerLink="/about">About </a>
         <a routerLink="/currency">Carrency rate </a>
     </nav>
